# copier-python-project-template

./: .gitignore  README.md  copier.yml  pyproject.toml
.github/workflows/: run-tests.yaml
tests/: conftest.py  test_within_generated_project.py
